--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-/* App.css */
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&display=swap');
 
 body,
@@ -8,11 +7,10 @@ html,
   height: 100%;
   margin: 0;
   font-family: 'Merriweather', serif;
-  background-color: #2a532875;
-  /* Dark background for a mystical vibe */
-  color: #f8f8f2;
-  /* Light text for contrast */
+  background-color: #a7e0ac;
+  color: #333;
   text-align: center;
+  transition: background-color 0.3s ease-in-out;
 }
 
 .App-header {
@@ -25,23 +23,30 @@ html,
 
 input[type="text"] {
   padding: 10px;
-  border: none;
+  border: 2px solid #c8e6c9;
   border-radius: 4px;
   margin-right: 10px;
   width: 200px;
+  outline: none;
+  transition: border-color 0.2s ease-in-out;
+}
+
+input[type="text"]:focus {
+  border-color: #66bb6a;
 }
 
 button {
-  background-color: #80fb61;
-  /* React blue, feel free to choose a magical color */
+  background-color: #66bb6a;
   border: none;
   border-radius: 4px;
   padding: 10px 20px;
   cursor: pointer;
   font-size: 16px;
+  transition: background-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
 }
 
 button:hover {
-  background-color: #47b13d;
-  /* Darker shade on hover */
+  background-color: #4caf50;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
