--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,60 @@ button {
 }
 
 button:hover {
-  background-color: #4caf50;
+  background-color: #41a144;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.search-bar-container {
+  position: relative;
+  display: flex;
+  width: 30%;
+}
+
+input[type="text"] {
+  flex-grow: 1;
+  padding: 10px;
+  margin: 0;
+  display: block;
+  border: 1px solid #ccc;
+  border-radius: 4px 0 0 4px;
+  box-sizing: border-box;
+}
+
+button {
+  padding: 10px 20px;
+  margin: 0;
+  border: 1px solid #ccc;
+  background-color: #77b16b;
+  cursor: pointer;
+  border-radius: 0 4px 4px 0;
+  box-sizing: border-box;
+}
+
+.suggestions {
+  position: absolute;
+  z-index: 1;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.6);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  overflow: hidden;
+  box-sizing: border-box;
+  margin-top: 1px;
+  padding-left: 0;
+}
+
+.suggestions li {
+  padding: 10px;
+  text-align: left;
+  cursor: pointer;
+  list-style-type: none;
+  background-color: rgba(255, 255, 255, 0.6);
+}
+
+.suggestions li:hover {
+  background-color: rgba(245, 245, 245, 0.9);
 }
